# shingetsu

./: .gitignore  AGENTS.md  COPYRIGHT  Cargo.toml  MIGRATE.md  Makefile  README.md  TODO.md  zensical.toml
.cargo/: config.toml
.github/workflows/: docs.yml  mirror.yml  tests.yml
crates/shingetsu/: Cargo.toml
crates/shingetsu-cli/: Cargo.toml
crates/shingetsu-cli/src/: doc.rs  highlight.rs  main.rs  repl.rs
crates/shingetsu-cli/tests/: cli.rs
crates/shingetsu-compiler/: Cargo.toml
crates/shingetsu-compiler/src/: codegen.rs  error.rs  lib.rs  lint_directives.rs  lint_ir.rs  locals.rs  lower.rs  scope.rs  type_check.rs  type_convert.rs  util.rs
crates/shingetsu-compiler/src/lint_ir/: lower.rs  mod.rs
crates/shingetsu-compiler/src/locals/: tests.rs
crates/shingetsu-compiler/tests/: basics.rs  bit32.rs  builtins.rs  callback_arg_check.rs  closures.rs  common.rs  contextual_callback_check.rs  debug_getinfo.rs  debug_info.rs  debug_introspection.rs  debug_lib.rs  derive_enum.rs  derive_enum_compile_fail.rs  derive_struct.rs  derive_struct_compile_fail.rs  diagnostics.rs  dofile.rs  env_metamethods.rs  errors.rs  event_handler_check.rs  gc.rs  integration.rs  io_lib.rs  lint_directives.rs  lint_plugin.rs  load.rs  luau.rs  macros.rs  math_lib.rs  metatables.rs  native_calls.rs  os_lib.rs  process.rs  proto_lines.rs  regex_lib.rs  scope_drop_timing.rs  shlex_lib.rs  string_extensions.rs  strings.rs  tables.rs  (+20 more)
crates/shingetsu-compiler/tests/compile_fail/: enum_empty.rs  enum_empty.stderr  enum_identical_discriminants.rs  enum_identical_discriminants.stderr  enum_internal_tag_non_table.rs  enum_internal_tag_non_table.stderr  enum_multi_field.rs  enum_multi_field.stderr  enum_option_variant.rs  enum_option_variant.stderr  enum_struct_variant.rs  enum_struct_variant.stderr  enum_two_table_structs.rs  enum_two_table_structs.stderr  enum_unit_variant.rs  enum_unit_variant.stderr  struct_rename_all_with_try_from.rs  struct_rename_all_with_try_from.stderr
crates/shingetsu-derive/: Cargo.toml
crates/shingetsu-derive-impl/: Cargo.toml
crates/shingetsu-derive-impl/src/: facade.rs  lib.rs  lua_enum.rs  lua_enum_mlua.rs  lua_struct.rs  lua_struct_mlua.rs  module.rs  userdata.rs  util.rs
crates/shingetsu-derive/src/: lib.rs  lua_enum.rs  lua_struct.rs  module.rs  userdata.rs  util.rs
crates/shingetsu-docgen/: Cargo.toml
crates/shingetsu-docgen/src/: display.rs  extract_lua.rs  lib.rs  luau.rs  markdown.rs  merge.rs  populate.rs  synopsis.rs  to_types.rs  typeref.rs
crates/shingetsu-docgen/tests/: example_validation.rs  extract.rs  luau_lsp.rs  markdown.rs
crates/shingetsu-docgen/tests/common/: mod.rs
crates/shingetsu-docgen/tests/fixtures/: definitions.d.luau  doc_model.json  markdown_inline.txt  markdown_split.txt
crates/shingetsu-meta/: Cargo.toml
crates/shingetsu-meta/src/: lib.rs  meta_method.rs
crates/shingetsu-migrate/: Cargo.toml
crates/shingetsu-migrate-derive/: Cargo.toml
crates/shingetsu-migrate-derive/src/: lib.rs
crates/shingetsu-migrate/src/: bytes.rs  callback.rs  dynamic.rs  engine.rs  event.rs  lib.rs  memoized.rs  serde_index.rs  serde_lua.rs  userdata_ref.rs  variadic.rs
crates/shingetsu-migrate/tests/: docgen.rs  dynamic.rs  engine.rs  event.rs  event_doc_capture.rs  event_parity.rs  install_on.rs  module.rs  round_trip.rs  smoke.rs  userdata.rs  userdata_async.rs  userdata_close.rs  userdata_metamethods.rs  userdata_pairs.rs  userdata_ref.rs  userdata_snapshot.rs  variadic.rs
crates/shingetsu-repl/: Cargo.toml
crates/shingetsu-repl/src/: lib.rs
crates/shingetsu-vm/: Cargo.toml
crates/shingetsu-vm/src/: builtins.rs  byte_string.rs  bytecode.rs  call_context.rs  call_stack.rs  callable.rs  callback.rs  convert.rs  diagnostics.rs  error.rs  file.rs  function.rs  gc.rs  global_env.rs  into_function.rs  ir.rs  lib.rs  meta_method.rs  module_loader.rs  proto.rs  serde_bridge.rs  serde_lua.rs  serde_ser.rs  shared_registry.rs  snapshot_table.rs  snapshot_value.rs  sync.rs  table.rs  task.rs  traceback.rs  types.rs  upvalue.rs  userdata.rs  value.rs
crates/shingetsu/benches/: vm_benchmarks.rs
crates/shingetsu/src/: bit32.rs  builtins.rs  debug.rs  debug_lib.rs  diagnostic.rs  io.rs  io_lib.rs  lib.rs  lint_plugin.rs  lua_pattern.rs  main.rs  math_lib.rs  module_loader.rs  os.rs  os_lib.rs  popen.rs  pretty_print.rs  process.rs  project_config.rs  shlex_lib.rs  string_lib.rs  string_pack.rs  table_lib.rs  task.rs  tokio_file.rs  utf8_lib.rs
crates/shingetsu/src/lint_plugin/: dispatch.rs  mod.rs  node.rs  orchestrator.rs
crates/shingetsu/src/regex_lib/: bytes.rs  fancy.rs  mod.rs
crates/shingetsu/src/task/: channel.rs  lua_task.rs  lua_task_set.rs  mod.rs  mutex.rs  notify.rs  oneshot.rs  runtime_error.rs  rwlock.rs  semaphore.rs  sync_common.rs  watch.rs
docs/: differences.md  index.md
docs/assets/rustdoc/: before-content.html  header.html
docs/embedding/: async.md  basics.md  errors-and-diagnostics.md  events.md  index.md  mapping-values.md  module-loaders.md  modules.md  multi-values.md  sandboxing.md  sync-registry.md  tables-structs-enums.md  userdata.md
docs/stylesheets/: extra.css
docs/syntax/: comments.md  control-flow.md  error-handling.md  functions.md  index.md  linting.md  metatables.md  modules.md  operators.md  strings.md  tables.md  type-annotations.md  values-and-types.md  variables-and-scope.md
notes/: ENTRYPOINT.md  LINT.md  LUA-ANNOTATIONS.md  SYNC.md
notes/migration/: MIGRATE.md  README.md  final-removal.md  kumomta.md  wezterm.md
overrides/partials/: logo.html
