[workspace]
members = [
    "crates/shingetsu",
    "crates/shingetsu-cli",
    "crates/shingetsu-compiler",
    "crates/shingetsu-derive",
    "crates/shingetsu-meta",
    "crates/shingetsu-vm",
]
resolver = "3"

[workspace.dependencies]
annotate-snippets = "0.12"
anyhow = "1.0"
async-trait = "0.1"
bitflags = "2"
downcast-rs = "1.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
bstr = "1.12.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
dashmap = "6"
full_moon = { version = "2.1.1", features = ["lua52", "lua54", "luau"] }
indexmap = "2"
futures = "0.3"
parking_lot = "0.12"
k9 = "0.12"
libc = "0.2"
memchr = "2"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
shingetsu = { path = "crates/shingetsu" }
shingetsu-derive = { path = "crates/shingetsu-derive" }
shingetsu-compiler = { path = "crates/shingetsu-compiler" }
shingetsu-meta = { path = "crates/shingetsu-meta" }
shingetsu-vm = { path = "crates/shingetsu-vm" }
tempfile = "3"
time = { version = "0.3", features = ["local-offset", "formatting", "parsing", "macros"] }
thiserror = "2"
toml = "1"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "rt-multi-thread", "macros", "sync"] }
trybuild = "1"
