[workspace]
members = [
    "crates/shingetsu",
    "crates/shingetsu-cli",
    "crates/shingetsu-compiler",
    "crates/shingetsu-derive",
    "crates/shingetsu-derive-impl",
    "crates/shingetsu-docgen",
    "crates/shingetsu-meta",
    "crates/shingetsu-migrate",
    "crates/shingetsu-migrate-derive",
    "crates/shingetsu-repl",
    "crates/shingetsu-vm",
]
resolver = "3"

[workspace.dependencies]
annotate-snippets = "0.12"
anyhow = "1.0"
async-trait = "0.1"
bitflags = "2"
downcast-rs = "1.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
bstr = "1.12.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
dashmap = "6"
fancy-regex = "0.18"
full_moon = { version = "3.0.0", git="https://github.com/wez/full-moon.git", branch="s", features = ["lua55", "luau"] }
indexmap = "2"
futures = "0.3"
parking_lot = "0.12"
k9 = "0.12"
libc = "0.2"
log = "0.4"
memchr = "2"
mlua = { version = "0.10", features = ["async", "lua54", "serialize", "vendored"] }
rand = "0.9"
regex = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shingetsu = { path = "crates/shingetsu" }
smallvec = { version = "1", features = ["const_generics"] }
strsim = "0.11"
shingetsu-compiler = { path = "crates/shingetsu-compiler" }
shingetsu-derive = { path = "crates/shingetsu-derive" }
shingetsu-derive-impl = { path = "crates/shingetsu-derive-impl" }
shingetsu-docgen = { path = "crates/shingetsu-docgen" }
shingetsu-meta = { path = "crates/shingetsu-meta" }
shingetsu-migrate = { path = "crates/shingetsu-migrate" }
shingetsu-migrate-derive = { path = "crates/shingetsu-migrate-derive" }
shingetsu-repl = { path = "crates/shingetsu-repl" }
shingetsu-vm = { path = "crates/shingetsu-vm" }
tempfile = "3"
time = { version = "0.3", features = ["local-offset", "formatting", "parsing", "macros"] }
termwiz = "0.23"
thiserror = "2"
toml = "1"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "rt-multi-thread", "macros", "sync"] }
trybuild = "1"
wezterm-dynamic = "0.2"
