[package]
name = "shingetsu-cli"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "shingetsu"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
full_moon = { workspace = true }
serde_json = { workspace = true }
shingetsu = { workspace = true }
shingetsu-compiler = { workspace = true }
shingetsu-docgen = { workspace = true }
shingetsu-repl = { workspace = true }
termwiz = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
k9 = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
