[package]
name = "shingetsu-derive-impl"
version = "0.1.0"
edition = "2021"

# Shared codegen library that backs `shingetsu-derive` and the
# migration-facade derives in `shingetsu-migrate-derive`.  Splitting
# the codegen out of the proc-macro crate lets the facade reuse the
# exact same shingetsu-side output without re-implementing the
# attribute parsing or token generation.

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
shingetsu-meta = { workspace = true }
syn = { workspace = true }
