[package]
name = "shingetsu-docgen"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = { workspace = true }
full_moon = { workspace = true }
serde = { workspace = true }
shingetsu = { workspace = true }
shingetsu-vm = { workspace = true }

[dev-dependencies]
k9 = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
