[package]
name = "shingetsu-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
downcast-rs = { workspace = true }
bstr = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
libc = { workspace = true }
parking_lot = { workspace = true }
shingetsu-derive = { workspace = true }
shingetsu-meta = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
k9 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
