[package]
name = "shingetsu-vm"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
# Adds `impl From<anyhow::Error> for VmError`, so hosts whose
# fallible code already yields `anyhow::Error` can use `?` directly
# in `Result<T, VmError>` returns instead of an explicit map_err.
# Enabled by the migration facade (wezterm and kumomta both use
# anyhow).
anyhow = ["dep:anyhow"]
# Routes diagnostic messages emitted from infallible-by-trait paths
# (e.g. SerdeLua::into_lua) through the `log` crate instead of
# eprintln!.  Hosts that already plumb `log` should enable this so
# their existing log infrastructure picks up the messages.
log = ["dep:log"]

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true }
downcast-rs = { workspace = true }
bstr = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
libc = { workspace = true }
log = { workspace = true, optional = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
shingetsu-derive = { workspace = true }
shingetsu-meta = { workspace = true }
smallvec = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
k9 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
