[package]
name = "shingetsu"
version = "0.1.0"
edition = "2021"

[dependencies]
annotate-snippets = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bstr = { workspace = true }
bytes = { workspace = true }
downcast-rs = { workspace = true }
memchr = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
shingetsu-compiler = { workspace = true }
shingetsu-derive = { workspace = true }
shingetsu-vm = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }

[dev-dependencies]
k9 = { workspace = true }
tempfile = { workspace = true }
