[package]
name = "shingetsu"
version = "0.1.0"
edition = "2021"

[features]
# Forward host-visible warnings (e.g. configuration-reload
# reconfiguration of named sync primitives) through the `log` crate.
# When disabled, fall back to `eprintln!`.  Enable in hosts that
# already plumb `log` so their existing log infrastructure picks up
# the messages.
log = ["dep:log", "shingetsu-vm/log"]
test-utils = ["dep:similar"]
# Adds `impl From<anyhow::Error> for VmError` (see
# `shingetsu-vm`'s `anyhow` feature).  Enabled by the migration
# facade for hosts that already use anyhow.
anyhow = ["shingetsu-vm/anyhow"]

[dependencies]
annotate-snippets = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
bstr = { workspace = true }
bytes = { workspace = true }
downcast-rs = { workspace = true }
fancy-regex = { workspace = true }
futures = { workspace = true }
log = { workspace = true, optional = true }
memchr = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
shingetsu-compiler = { workspace = true }
shingetsu-derive = { workspace = true }
shingetsu-vm = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }
similar = { workspace = true, optional = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "time"] }

[dev-dependencies]
criterion = { workspace = true }
full_moon = { workspace = true }
k9 = { workspace = true }
mlua = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[[bench]]
name = "vm_benchmarks"
harness = false
